--- a/login.html
+++ b/login.html
@@ -35,8 +35,8 @@ button{
 	</style>
 </head>
 <body >
-		<h1 style="padding-left: 150px;color: white;">Login form</h1>
-	<div class="container" style="border:1px solid blue;width: 35%;border-radius: 10px;padding-top: 30px;padding-bottom: 20px;">
+		<h1 style="color: white;">Login form</h1>
+	<div class="container" style="border:1px solid blue;border-radius: 10px;padding-top: 30px;padding-bottom: 20px;">
 	
 
 <form >
@@ -55,7 +55,7 @@ button{
 </div>
 </form>
 <p style="text-align: center;">or</p>
-<div class="but" style="padding-left: 180px;">
+
 <button><a href="sign.html"> SignUp</button></a>
 </div>
 
