--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@ button{
 </head>
 <body >
 		<h1 style="color: white;">Login form</h1>
-	<div class="container" style="border:1px solid blue;border-radius: 10px;padding-top: 30px;padding-bottom: 20px;width:50%;">
+	<div class="container" style="border:1px solid blue;border-radius: 10px;width:30%;">
 	
 
 <form >
@@ -43,12 +43,12 @@ button{
 
 <br><br>    
 <button ><a href="todo.html">Login</button></a>
-</form>
+
 <p>or</p>
 
 <button><a href="sign.html"> SignUp</button></a>
 </div>
-
+</form>
 
 
 </body>
